--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-spawn": "^7.0.6",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
